# WrittenBookEditor

./: .gitignore  Pipfile  README.md  main.py  main.spec  pyproject.toml
.github/workflows/: TruffleHog-OSS.yml  pyinstaller-build.yml  pytest.yml  ruff.yml
data/: unifont_jp_force_width_chars.json
data/font/: default_chars.json  unifont_force_width_chars.json
data/font/unifont_jp/: unifont_jp_patch-15.1.05.hex
data/lang/: about_en_US.html  about_zh_CN.html  en_US.toml  zh_CN.toml
data/test/: test_txt_1.txt
docs/: README_en_US.md
scripts/: generate_metadata.py  generate_ui.py
src/writtenbookeditor/: __init__.py  __main__.py  encoding_window.py  export.py  jump_form_window.py  main_window.py  render.py
src/writtenbookeditor/book/: __init__.py  book.py  page.py  util.py
src/writtenbookeditor/font/: __init__.py  default.py  space.py  unifont.py  util.py
src/writtenbookeditor/gui/: about_dialog.py  about_form.ui  encoding_dialog.py  encoding_form.ui  export_dialog.py  export_form.ui  jump_dialog.py  jump_form.ui  main_window.py  mainwindow.ui  ui_about_form.py  ui_encoding_form.py  ui_export_form.py  ui_jump_form.py  ui_mainwindow.py
src/writtenbookeditor/i18n/: __init__.py  lang.py  translate.py
src/writtenbookeditor/minimessage/: __init__.py  style.py  tag.py  text_component.py
src/writtenbookeditor/text/: __init__.py  minimessage.py  segment.py  style.py  text_component.py  util.py  utils.py
src/writtenbookeditor/util/: color.py  json_util.py  open_folder.py
tests/: conftest.py  font_test.py  page_test.py  style_text_test.py
